<resources>
    <string name="app_name">믿집</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">EnDaTa!</string>

    <string name="menu_credit">나의 신용</string>
    <string name="menu_trade">거래 관리</string>
    <string name="menu_monitor">데이터 활용 모니터링</string>
    <string name="menu_notice">알림</string>

    <string name="menu_setting">설정</string>
    <string name="menu_using">이용약관</string>

    <string-array name="Area_Spinner_Items">
        <item>서울특별시 구로구</item>
        <item>서울특별시 관악구</item>
        <item>서울특별시 서초구</item>
        <item>서울특별시 강남구</item>
        <item>서울특별시 송파구</item>
        <item>서울특별시 강동구</item>
        <item>서울특별시 광진구</item>
        <item>서울특별시 중랑구</item>
        <item>서울특별시 노원구</item>
        <item>서울특별시 도봉구</item>
        <item>서울특별시 강북구</item>
        <item>서울특별시 성북구</item>
        <item>서울특별시 동대문구</item>
        <item>서울특별시 성동구</item>
        <item>서울특별시 용산구</item>
        <item>서울특별시 중구</item>
        <item>서울특별시 종로구</item>
        <item>서울특별시 서대문구</item>
        <item>서울특별시 마포구</item>
        <item>서울특별시 은평구</item>
        <item>서울특별시 강서구</item>
        <item>서울특별시 양천구</item>
        <item>서울특별시 동작구</item>
        <item>서울특별시 영등포구</item>
        <item>서울특별시 금천구</item>
    </string-array>


    <string name="tab_text_1">상환이력</string>
    <string name="tab_text_2">재정수준</string>
    <string name="tab_text_3">거래기간</string>
    <string name="tab_text_4">대출</string>
    <string name="tab_text_5">임의</string>
</resources>
