<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_credit"
            android:icon="@drawable/icon_customer_insight"
            android:title="@string/menu_credit" />
        <item
            android:id="@+id/nav_trade"
            android:icon="@drawable/icon_property"
            android:title="@string/menu_trade" />
        <item
            android:id="@+id/nav_monitor"
            android:icon="@drawable/icon_property"
            android:title="@string/menu_data_monitoring" />
        <item
            android:id="@+id/nav_notice"
            android:icon="@drawable/icon_property"
            android:title="@string/menu_notice" />
    </group>

    <item android:title="앱">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/icon_data_setting"
                android:title="@string/menu_setting" />
            <item
                android:id="@+id/nav_using"
                android:icon="@drawable/icon_terms_conditions"
                android:title="@string/menu_using" />
        </menu>
    </item>

</menu>
